# tool-gov-data-fetcher

./: README.md  pyproject.toml
data/cod/: 3_group_code.json  4_full_code.json
data/cod/full_code/: full_code_B.json  full_code_D.json  full_code_E.json  full_code_F.json  full_code_G.json  full_code_H.json  full_code_I.json  full_code_J.json
data/gcis/: 1_section_code.json
data/gcis/full_code/: full_code_A.json  full_code_C.json  full_code_Z.json
src/gov_data_fetcher/: main.py
src/gov_data_fetcher/core/: utility.py
src/gov_data_fetcher/scrapers/: gcis.py
src/moea_gcis/: main.py
src/moea_gcis/scrapers/: update_cod_data.py
