[project]
name = "tool-gov-data-fetcher"
version = "0.1.0"
description = "Python package for fetching and updating GOV data via API."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.32.5",
    "ruff>=0.15.0",
]

[project.scripts]
main = "gov_data_fetcher.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gov_data_fetcher"]
